--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <!-- DROPDOWN 1 -->
             <li class="dropdown__item">
               <div class="nav__link dropdown__button">
-                Discover <i class="fi fi-rr-angle-small-down dropdown__arrow"></i>
+                პროდუქცია <i class="fi fi-rr-angle-small-down dropdown__arrow"></i>
               </div>
 
               <div class="dropdown__container">
@@ -305,11 +305,57 @@
     <!-- search offcanvas -->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="searchOffcanvas" aria-labelledby="searchOffcanvasLabel">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="searchOffcanvasLabel">OFFCANVAS</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        <h5 class="offcanvas-title" id="searchOffcanvasLabel">ძიება</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+          <i class="fi fi-rr-cross-small"></i>
+        </button>
       </div>
       <div class="offcanvas-body">
-        ...
+        <form action="#" method="get" class="form-floating mb-3">
+          <input type="search" class="form-control" id="floatingInput" placeholder="name@example.com">
+          <label for="floatingInput">რა ტიპის დინამიკს ეძებ?</label>
+        </form>
+
+        <div class="devices mt-4">
+          <h6 class="devices__title">დინამიკები</h6>
+          <div class="container mt-4">
+            <div class="row row-cols-auto">
+              <a href="#" class="device__box col">
+                <img src="assets/images/dd.jpg" alt="">
+                <p class="title">Neutron C 305</p>
+                <span class="badge">ახალი</span>
+              </a>
+              <a href="#" class="device__box col">
+                <img src="assets/images/dd.jpg" alt="">
+                <p class="title">Neutron C 305</p>
+              </a>
+              <a href="#" class="device__box col">
+                <img src="assets/images/dd.jpg" alt="">
+                <p class="title">Neutron C 305</p>
+              </a>
+              <a href="#" class="device__box col">
+                <img src="assets/images/dd.jpg" alt="">
+                <p class="title">Neutron C 305</p>
+                <span class="badge">ახალი</span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="popular__search mt-5">
+
+          <h6 class="title mb-4">ხშირად გამოყენებული ფრაზები</h6>
+
+          <div class="list-group">
+            <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
+              The current link item
+            </a>
+            <a href="#" class="list-group-item list-group-item-action">A second link item</a>
+            <a href="#" class="list-group-item list-group-item-action">A third link item</a>
+            <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
+            <a class="list-group-item list-group-item-action disabled" aria-disabled="true">A disabled link item</a>
+          </div>
+        </div>
       </div>
     </div>
   </header>
