--- a/index.html
+++ b/index.html
@@ -310,21 +310,15 @@
           <i class="fi fi-rr-cross-small"></i>
         </button>
       </div>
-      <div class="offcanvas-body">
+      <div class="offcanvas-body search__offcanvas">
         <form action="#" method="get" class="form-floating mb-3">
           <input type="search" class="form-control" id="floatingInput" placeholder="name@example.com">
           <label for="floatingInput">რა ტიპის დინამიკს ეძებ?</label>
         </form>
 
-        <div class="devices mt-4">
+        <div class="devices">
           <h6 class="devices__title">დინამიკები</h6>
-          <div class="container mt-4">
-            <div class="row row-cols-auto">
-              <a href="#" class="device__box col">
-                <img src="assets/images/dd.jpg" alt="">
-                <p class="title">Neutron C 305</p>
-                <span class="badge">ახალი</span>
-              </a>
+          <div class="device__container d-flex">
               <a href="#" class="device__box col">
                 <img src="assets/images/dd.jpg" alt="">
                 <p class="title">Neutron C 305</p>
@@ -336,24 +330,24 @@
               <a href="#" class="device__box col">
                 <img src="assets/images/dd.jpg" alt="">
                 <p class="title">Neutron C 305</p>
-                <span class="badge">ახალი</span>
               </a>
-            </div>
+              <a href="#" class="device__box col">
+                <img src="assets/images/dd.jpg" alt="">
+                <p class="title">Neutron C 305</p>
+              </a>
           </div>
         </div>
 
-        <div class="popular__search mt-5">
+        <div class="popular__search mt-4">
 
-          <h6 class="title mb-4">ხშირად გამოყენებული ფრაზები</h6>
+          <h6 class="title">ხშირად გამოყენებული ფრაზები</h6>
 
           <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
-              The current link item
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">A second link item</a>
-            <a href="#" class="list-group-item list-group-item-action">A third link item</a>
-            <a href="#" class="list-group-item list-group-item-action">A fourth link item</a>
-            <a class="list-group-item list-group-item-action disabled" aria-disabled="true">A disabled link item</a>
+            <a href="#" class="list-group-item list-group-item-action">Neutron C 305 <span>პროდუქტი</span></a>
+            <a href="#" class="list-group-item list-group-item-action">MAGMA W105 <span>სტატია</span></a>
+            <a href="#" class="list-group-item list-group-item-action">როგორ შევიძინო პროდუქტი? <span>დახმარება</span></a>
+            <a href="#" class="list-group-item list-group-item-action">Neutron C105 <span>პროდუქტი</span></a>
+            <a href="#" class="list-group-item list-group-item-action">Neutron C 305 <span>პროდუქტი</span></a>
           </div>
         </div>
       </div>
